fix small spacing issue

--- a/styles/pages/_pricing.scss
+++ b/styles/pages/_pricing.scss
@@ -30,7 +30,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
     @include breakpoint(xs) {
       flex-direction: column;
